--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,7 +2,7 @@
     <h2>新增讨论版</h2>
 
     <hr>
-    <%= form_for @group do |f| %>
+    <%= form_for Group.new do |f| %>
 
     标题
     <%= f.text_field :title %>
